--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "Team-jomphalang",
   "version": "1.0.0",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "express": "~4.16.4",
+    "morgan": "~1.9.1",
+    "compression": "~1.7.3",
     "body-parser": "~1.18.3",
-    "express": "~4.16.0"
+    "cookie-parser": "~1.4.3",
+    "express-session": "~1.15.6",
+    "mongoose": "~5.4.2"
   }
 }
