--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "~1.18.3",
     "cookie-parser": "~1.4.3",
     "express-session": "~1.15.6",
-    "mongoose": "~5.4.2"
+    "mongoose": "~5.4.2",
+    "jade": "~1.11.0"
   }
 }
