--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "Team-jomphalang",
   "version": "1.0.0",
   "dependencies": {
-    "express": "~4.16.4",
-    "morgan": "~1.9.1",
-    "compression": "~1.7.3",
     "body-parser": "~1.18.3",
+    "compression": "~1.7.3",
     "cookie-parser": "~1.4.3",
+    "express": "~4.16.4",
     "express-session": "~1.15.6",
-    "mongoose": "~5.4.2",
-    "jade": "~1.11.0"
+    "isodate": "^0.1.4",
+    "jade": "~1.11.0",
+    "mongoose": "^5.4.3",
+    "morgan": "~1.9.1",
+    "request": "^2.88.0"
   }
 }
