--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "cookie-parser": "~1.4.3",
     "express": "~4.16.4",
     "express-session": "~1.15.6",
-    "isodate": "^0.1.4",
     "jade": "~1.11.0",
     "mongoose": "^5.4.3",
     "morgan": "~1.9.1",
-    "request": "^2.88.0"
+    "node-schedule": "~1.3.1"
   }
 }
